prod/force-app/main/default/objects/Attribution_Travaux__c/Attribution_Travaux__c.object-meta.xml
<CustomObject>
    <label>Attribution des travaux</label>
    <nameField>
        <displayFormat>ATTR-{0000}</displayFormat>
        <label>Numero d attribution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributions des travaux</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>