prod/force-app/main/default/objects/Attribution_Travaux__c/fields/Montant_S_trait_ext__c.field-meta.xml
<CustomField>
    <fullName>Montant_S_trait_ext__c</fullName>
    <description>Montant estime de sous-traitance externe pour cette attribution de travaux.</description>
    <label>Montant S-trait ext. (estimation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>