prod/force-app/main/default/objects/Attribution_Travaux__c/fields/Sous_traitant_2__c.field-meta.xml
<CustomField>
    <fullName>Sous_traitant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact du 2e sous-traitant attribue a ces travaux.</description>
    <label>Sous-traitant 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attributions des travaux (Sous-traitant 2)</relationshipLabel>
    <relationshipName>Attributions_Travaux_ST2</relationshipName>
    <type>Lookup</type>
</CustomField>