prod/force-app/main/default/objects/Attribution_Travaux__c/fields/Sous_traitant_3__c.field-meta.xml
<CustomField>
    <fullName>Sous_traitant_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact du 3e sous-traitant attribue a ces travaux.</description>
    <label>Sous-traitant 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attributions des travaux (Sous-traitant 3)</relationshipLabel>
    <relationshipName>Attributions_Travaux_ST3</relationshipName>
    <type>Lookup</type>
</CustomField>