prod/force-app/main/default/objects/Attribution_Travaux__c/fields/Sous_traitant_4__c.field-meta.xml
<CustomField>
    <fullName>Sous_traitant_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact du 4e sous-traitant attribue a ces travaux.</description>
    <label>Sous-traitant 4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attributions des travaux (Sous-traitant 4)</relationshipLabel>
    <relationshipName>Attributions_Travaux_ST4</relationshipName>
    <type>Lookup</type>
</CustomField>