prod/force-app/main/default/objects/Attribution_Travaux__c/fields/Sous_traitant__c.field-meta.xml
<CustomField>
    <fullName>Sous_traitant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact du 1er sous-traitant attribue a ces travaux.</description>
    <label>Sous-traitant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attributions des travaux</relationshipLabel>
    <relationshipName>Attributions_Travaux</relationshipName>
    <type>Lookup</type>
</CustomField>