prod/force-app/main/default/objects/Attribution_Travaux__c/fields/Travaux_CFC__c.field-meta.xml
<CustomField>
    <fullName>Travaux_CFC__c</fullName>
    <description>Code des frais de construction (CFC) decrivant les travaux concernes par cette attribution.</description>
    <label>Travaux (CFC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>